feat: update mobile layout

--- a/src/styles/components/ConfirmModal.scss
+++ b/src/styles/components/ConfirmModal.scss
@@ -15,6 +15,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+    margin: 20px;
 
     .confirm-modal-buttons {
         margin-top: 1rem;
