--- a/src/styles/components/TodoItem.scss
+++ b/src/styles/components/TodoItem.scss
@@ -6,55 +6,73 @@
     border-radius: 12px;
     border: 1px solid #E0E0E0;
     background-color: #FFFFFF;
-    justify-content: space-between;
-  
-    &__left {
-      display: flex;
-      column-gap: 1rem;
-      align-items: center;
-  
-      .btn-check {
-        color: #0074FF;
-      }
-  
-      span {
-        font-size: 16px;
-      }
-  
-      .done {
-        text-decoration: line-through;
-        color: #0074FF;
-      }
+    column-gap: 1rem;
+
+    .btn-check {
+      color: #0074FF;
     }
-  
-    &__right {
+
+    &-content {
+      width: 100%;
       display: flex;
-      column-gap: 2rem;
-      align-items: center;
-  
-      select {
-        background-color: #EBF1FF;
-        font-family: Arial, sans-serif;
-        border-radius: 4px;
-        width: 130px;
-        height: 30px;
-        font-size: 16px;
-        border: 1px solid #E0E0E0;
-        cursor: pointer;
-      }
-  
-      .btn-edit, .btn-trash {
-        svg {
+      justify-content: space-between;
+
+      .todo-item__left {
+        display: flex;
+        column-gap: 1rem;
+        align-items: center;
+    
+        span {
+          font-size: 16px;
+        }
+    
+        .done {
+          text-decoration: line-through;
           color: #0074FF;
+        }
+      }
+
+      .todo-item__right {
+        display: flex;
+        column-gap: 2rem;
+        align-items: center;
+    
+        select {
+          background-color: #EBF1FF;
+          font-family: Arial, sans-serif;
+          border-radius: 4px;
+          width: 130px;
+          height: 30px;
+          font-size: 16px;
+          border: 1px solid #E0E0E0;
           cursor: pointer;
         }
-      }
-  
-      .btn-trash:hover {
-        svg {
-          color: red;
+    
+        .btn-edit, .btn-trash {
+          svg {
+            color: #0074FF;
+            cursor: pointer;
+          }
+        }
+    
+        .btn-trash:hover {
+          svg {
+            color: red;
+          }
         }
       }
-  
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .todo-item {
+      width: 100%;
+
+      &-content {
+        display: flex;
+        row-gap: 0.5rem;
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
