--- a/src/styles/components/TodoModal.scss
+++ b/src/styles/components/TodoModal.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
   
     .todo-modal-content {
       background: white;
